<resources>
    <string name="app_name">Toilet Paper Prices</string>
    <!-- Main activity strings -->
    <string name="about_button_label">ABOUT</string>
    <string name="display_button_label">DISPLAY LIST</string>
    <string name="add_button_label">ADD PACKAGES</string>

    <!-- Add paper fragment strings -->
    <string name="brand_name_label">Brand name:</string>
    <string name="brand_name_hint">brand name</string>
    <string name="style_label">Style:</string>
    <string name="price_label">Price:</string>
    <string name="price_hint">29.99</string>
    <string name="num_rolls_label">Number of rolls:</string>
    <string name="num_rolls_hint">20</string>
    <string name="squares_per_roll_label">Number of squares per roll:</string>
    <string name="squares_per_roll_hint">100</string>
    <string name="store_name_label">Store name:</string>
    <string name="store_name_hint">store name</string>
    <string name="store_town_name_label">Town of store:</string>
    <string name="store_town_name_hint">store town name</string>
    <string name="add_tp_done_button_label">DONE</string>
    <string name="not_filled_correctly_label">Make sure to enter information in all fields</string>
    <string name="invalid_add_input">Invalid input, please try again</string>

    <!-- Display paper fragment strings -->
    <string name="edit_button_label">Edit</string>
    <string name="delete_button_label">Delete</string>
    <string name="no_packages_label">No packages of toilet paper to compare</string>

    <!-- About fragment strings -->
    <string name="about_page_text_text">Isn\'t it confusing how every brand prices toilet paper differently? Isn\'t it hard to know which truly is the best price, even with a different number of rolls per package and a different number of sheets per roll? With this, you can easily calculate the best price for toilet paper of many different brands!
        \n\nInput information about toilet paper packages, add it to the list, and see the display in the display page.
        \n\nTo input packages with similar information, press the back button. It will automatically fill in the information from the previous entry, which you can edit to make a new package based on the previous package.
        \n\nCode written by Emily Granville. Logo made by Thomas Granville.</string>
</resources>