<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AddTPView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/brand_name_hlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/brand_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand_name_label" />

            <EditText
                android:id="@+id/brand_name_editable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/brand_name_hint"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/price_hlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_label" />

            <EditText
                android:id="@+id/price_editable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/num_rolls_hlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/num_rolls_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_rolls_label" />

            <EditText
                android:id="@+id/num_rolls_editable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/num_rolls_hint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/squares_per_roll_hlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/squares_per_roll_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/squares_per_roll_label" />

            <EditText
                android:id="@+id/squares_per_roll_editable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/squares_per_roll_hint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/store_name_hlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/store_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_name_label" />

            <EditText
                android:id="@+id/store_name_editable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/store_name_hint"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/store_town_name_hlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/store_town_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_town_name_label" />

            <EditText
                android:id="@+id/store_town_name_editable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/store_town_name_hint"
                android:inputType="text" />

        </LinearLayout>

        <Button
            android:id="@+id/add_tp_done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_tp_done_button_label" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>